@@ -2,7 +2,12 @@ This is meant to be a concise list of player-visible changes (very minor
 changes may be omitted). For a complete list of changes, see the main
 changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
-Version 1.3.5+svn:
+Version 1.3.6+svn:
+  * Multiplayer
+    * Fixed a OOS message when recruiting which happened if the players use 
+      different languages.
+
+Version 1.3.5:
   * Language and translations
     * Updated translations: Finnish, French, German.
 
